Fixed alignment on product lines

--- a/app/src/sass/product-line-new.scss
+++ b/app/src/sass/product-line-new.scss
@@ -33,7 +33,7 @@
     }
 
     .center-it {
-      height: 31%;
+      padding: 50px 0;
       display: flex;
       align-items: flex-end;
       flex-direction: column;
